[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialog_plugin/Nodes/editor_event_node/event_property_nodes/string_property/singleline/line_edit.gd" type="Script" id=1]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 253.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
used_property = ""

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 118.0
margin_bottom = 19.0
text = "{PROPERTY_NAME}"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 122.0
margin_right = 253.0
margin_bottom = 24.0
size_flags_horizontal = 3

[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
